packaged initialisation logic into meshcat

--- a/graphics.ipynb
+++ b/graphics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "get_dcm_from_ends (generic function with 1 method)"
+       "initialise_ball (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -90,64 +90,9 @@
     "    nz = normalize(cross(nx, ny))\n",
     "\n",
     "    N_Q_B = [nx ny nz]\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Listening on: 127.0.0.1:8724, thread id: 1\n",
-      "└ @ HTTP.Servers C:\\Users\\jgunt\\.julia\\packages\\HTTP\\vnQzp\\src\\Servers.jl:382\n",
-      "┌ Info: MeshCat server started. You can open the visualizer by visiting the following URL in your browser:\n",
-      "│ http://127.0.0.1:8724\n",
-      "└ @ MeshCat C:\\Users\\jgunt\\.julia\\packages\\MeshCat\\QXID5\\src\\visualizer.jl:64\n"
-     ]
-    },
-    {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching GeometryBasics.Cylinder(::GeometryBasics.Point3{Float64}, ::GeometryBasics.Point3{Int64}, ::Float64)\nClosest candidates are:\n  GeometryBasics.Cylinder(::GeometryBasics.Point{N, T}, !Matched::GeometryBasics.Point{N, T}, ::T) where {N, T} at C:\\Users\\jgunt\\.julia\\packages\\GeometryBasics\\bLARu\\src\\primitives\\cylinders.jl:8",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching GeometryBasics.Cylinder(::GeometryBasics.Point3{Float64}, ::GeometryBasics.Point3{Int64}, ::Float64)\n",
-      "Closest candidates are:\n",
-      "  GeometryBasics.Cylinder(::GeometryBasics.Point{N, T}, !Matched::GeometryBasics.Point{N, T}, ::T) where {N, T} at C:\\Users\\jgunt\\.julia\\packages\\GeometryBasics\\bLARu\\src\\primitives\\cylinders.jl:8\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] create_rope(vis::MeshCat.Visualizer, len::Float64, R::Float64, A::Vector{Float64}, B::Vector{Int64})\n",
-      "   @ Main c:\\Users\\jgunt\\Documents\\GitHub\\16745proj\\graphics.ipynb:39\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\jgunt\\Documents\\GitHub\\16745proj\\graphics.ipynb:76"
-     ]
-    }
-   ],
-   "source": [
-    "let\n",
-    "    vis = mc.Visualizer()\n",
+    "end\n",
     "\n",
-    "    # NOTICE HOW I USE [:<OBJECT>][:base] WHEN DEFINING THE INITIAL OBJ OFFSETS \n",
-    "    # THEN WHEN I DO ANIMATION, I JUST USE [:<OBJECT>]\n",
-    "\n",
-    "    # dragon details (play with these to see how they change)\n",
-    "    dragon_obj = mc.HyperSphere(mc.Point(0.0, 0.0, 0.0), 0.5)\n",
-    "    dragon_material = mc.MeshPhongMaterial(color=mc.RGBA(0.6, 0.6, 1.0, 0.7))\n",
-    "    dragon_r_offset = [0, 0, 0]\n",
-    "    dragon_Q_offset = dcm_from_phi(pi / 2 * [1, 0, 0])\n",
-    "    dragon_offset = mc.compose(\n",
-    "        mc.Translation(dragon_r_offset),\n",
-    "        mc.LinearMap(dragon_Q_offset)\n",
-    "    )\n",
-    "\n",
-    "    # create first dragon \n",
-    "    mc.setobject!(vis[:dragon][:base], dragon_obj, dragon_material) # NOTE :base\n",
-    "    mc.settransform!(vis[:dragon][:base], dragon_offset)            # NOTE :base\n",
-    "\n",
-    "    # quadrotor details (play with these to see how they change)\n",
+    "function initialise_quads(N,rope_length,mc,vis)\n",
     "    quad_obj = mc.MeshFileGeometry(joinpath(@__DIR__, \"quadrotor.obj\"))\n",
     "    quad_material = mc.MeshPhongMaterial(color=mc.RGBA(1.0, 0.6, 0.6, 0.7))\n",
     "    quad_r_offset = [0, 0, 0]\n",
@@ -157,97 +102,83 @@
     "        mc.Translation(quad_r_offset),\n",
     "        mc.LinearMap(quad_scale * quad_Q_offset)\n",
     "    )\n",
-    "\n",
-    "    # create quadrotor \n",
-    "    # mc.setobject!(vis[:quad][:base], quad_obj, quad_material)       # NOTE :base\n",
-    "    # mc.settransform!(vis[:quad][:base], quad_offset)                # NOTE :base\n",
-    "\n",
-    "    # quad_offset = mc.compose(\n",
-    "    #     mc.Translation([1,1,0]),\n",
-    "    #     mc.LinearMap(quad_scale * quad_Q_offset)\n",
-    "    # )\n",
-    "\n",
-    "    # mc.setobject!(vis[:quad2][:base], quad_obj, quad_material)      \n",
-    "    # mc.settransform!(vis[:quad2][:base], quad_offset)               \n",
-    "\n",
-    "    # create rope between them\n",
-    "    rope_length = 5.0\n",
-    "    # create_cyl(vis, rope_length, 0.05)\n",
-    "\n",
-    "    # cyl, material = create_rope(vis, rope_length, 0.05)\n",
-    "    # mc.setobject!(vis[:rope2], cyl, material)\n",
-    "\n",
-    "    # animation \n",
-    "    tf = 10.0\n",
-    "    N = 100\n",
-    "    t_vec = range(0.0, tf, length=N)\n",
-    "    dt = t_vec[2] - t_vec[1]\n",
-    "\n",
-    "    # position of dragon \n",
-    "    r_dragon = [[cos(t), sin(t), sin(t)] for t in t_vec]\n",
-    "    r_quad = [r + rope_length * normalize([1 + cos(t), -1 + cos(t), -0.3 + cos(t)]) for (r, t) in zip(r_dragon, t_vec)]\n",
-    "    r_quad2 = [r + rope_length * normalize([1 - cos(t), 1 + sin(t), -0.3 - sin(t)]) for (r, t) in zip(r_dragon, t_vec)]\n",
-    "\n",
-    "    for (a, b) in zip(r_dragon, r_quad)\n",
-    "        @assert norm(a - b) ≈ rope_length\n",
-    "    end\n",
-    "\n",
-    "\n",
-    "    N = 12\n",
+    "    \n",
     "    quad_rotor_position = []\n",
     "    for i = 1:N\n",
     "        quad_offset = mc.compose(\n",
     "            mc.Translation([3 * cos(i * 2 * pi / N), 3 * sin(i * 2pi / N), 0.5]),\n",
     "            mc.LinearMap(quad_scale * quad_Q_offset)\n",
     "        )\n",
+    "\n",
     "        mc.setobject!(vis[Symbol(\"quad\", i)][:base], quad_obj, quad_material)\n",
     "        mc.settransform!(vis[Symbol(\"quad\", i)][:base], quad_offset)\n",
-    "        # Change 2nd array to object being carried offset V\n",
+    "\n",
     "        cyl, material = create_rope(vis, rope_length, 0.05, [3 * cos(i * 2 * pi / N), 3 * sin(i * 2pi / N), 0.5], [0.0,0.0,0.0])\n",
     "        mc.setobject!(vis[Symbol(\"rope\", i)], cyl, material)\n",
-    "        # rope_offset = [0, 0, 1]\n",
-    "        # # mc.settransform!(vis[Symbol(\"rope\", i)][:base], rope_offset)\n",
     "    end\n",
-    "    rope_rs = [(a + b) / 2 for (a, b) in zip(r_dragon, r_quad)]\n",
+    "end \n",
     "\n",
-    "    rope2_Qs = [get_dcm_from_ends(a, b) for (a, b) in zip(r_dragon, r_quad2)]\n",
-    "    rope2_rs = [(a + b) / 2 for (a, b) in zip(r_dragon, r_quad2)]\n",
+    "function initialise_ball(mc,vis)\n",
+    "    # dragon details (play with these to see how they change)\n",
+    "dragon_obj = mc.HyperSphere(mc.Point(0.0, 0.0, 0.0), 0.5)\n",
+    "dragon_material = mc.MeshPhongMaterial(color=mc.RGBA(0.6, 0.6, 1.0, 0.7))\n",
+    "dragon_r_offset = [0, 0, 0]\n",
+    "dragon_Q_offset = dcm_from_phi(pi / 2 * [1, 0, 0])\n",
+    "dragon_offset = mc.compose(\n",
+    "    mc.Translation(dragon_r_offset),\n",
+    "    mc.LinearMap(dragon_Q_offset)\n",
+    ")\n",
     "\n",
-    "    # make up attitudes for dragon and quad\n",
+    "# create first dragon \n",
+    "mc.setobject!(vis[:dragon][:base], dragon_obj, dragon_material) # NOTE :base\n",
+    "mc.settransform!(vis[:dragon][:base], dragon_offset)            # NOTE :base\n",
+    "end "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Listening on: 127.0.0.1:8715, thread id: 1\n",
+      "└ @ HTTP.Servers /Users/harshul/.julia/packages/HTTP/vnQzp/src/Servers.jl:382\n",
+      "┌ Info: MeshCat server started. You can open the visualizer by visiting the following URL in your browser:\n",
+      "│ http://127.0.0.1:8715\n",
+      "└ @ MeshCat /Users/harshul/.julia/packages/MeshCat/QXID5/src/visualizer.jl:64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "    <div style=\"height: 500px; width: 100%; overflow-x: auto; overflow-y: hidden; resize: both\">\n",
+       "    <iframe src=\"http://127.0.0.1:8715\" style=\"width: 100%; height: 100%; border: none\"></iframe>\n",
+       "    </div>\n"
+      ],
+      "text/plain": [
+       "MeshCat.DisplayedVisualizer(MeshCat.CoreVisualizer(MeshCat.SceneTrees.SceneNode(nothing, nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}(\"meshcat\" => MeshCat.SceneTrees.SceneNode(nothing, nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}(\"rope10\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x63, 0x61, 0x74, 0x2f, 0x72, 0x6f, 0x70, 0x65, 0x31, 0x30], nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()), \"quad11\" => MeshCat.SceneTrees.SceneNode(nothing, nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}(\"base\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x75, 0x61, 0x64, 0x31, 0x31, 0x2f, 0x62, 0x61, 0x73, 0x65], UInt8[0x83, 0xa6, 0x6d, 0x61, 0x74, 0x72, 0x69, 0x78, 0xc7, 0x40  …  0x75, 0x61, 0x64, 0x31, 0x31, 0x2f, 0x62, 0x61, 0x73, 0x65], Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()))), \"rope9\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x68, 0x63, 0x61, 0x74, 0x2f, 0x72, 0x6f, 0x70, 0x65, 0x39], nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()), \"rope4\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x68, 0x63, 0x61, 0x74, 0x2f, 0x72, 0x6f, 0x70, 0x65, 0x34], nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()), \"quad10\" => MeshCat.SceneTrees.SceneNode(nothing, nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}(\"base\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x75, 0x61, 0x64, 0x31, 0x30, 0x2f, 0x62, 0x61, 0x73, 0x65], UInt8[0x83, 0xa6, 0x6d, 0x61, 0x74, 0x72, 0x69, 0x78, 0xc7, 0x40  …  0x75, 0x61, 0x64, 0x31, 0x30, 0x2f, 0x62, 0x61, 0x73, 0x65], Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()))), \"quad9\" => MeshCat.SceneTrees.SceneNode(nothing, nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}(\"base\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x71, 0x75, 0x61, 0x64, 0x39, 0x2f, 0x62, 0x61, 0x73, 0x65], UInt8[0x83, 0xa6, 0x6d, 0x61, 0x74, 0x72, 0x69, 0x78, 0xc7, 0x40  …  0x71, 0x75, 0x61, 0x64, 0x39, 0x2f, 0x62, 0x61, 0x73, 0x65], Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()))), \"quad12\" => MeshCat.SceneTrees.SceneNode(nothing, nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}(\"base\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x75, 0x61, 0x64, 0x31, 0x32, 0x2f, 0x62, 0x61, 0x73, 0x65], UInt8[0x83, 0xa6, 0x6d, 0x61, 0x74, 0x72, 0x69, 0x78, 0xc7, 0x40  …  0x75, 0x61, 0x64, 0x31, 0x32, 0x2f, 0x62, 0x61, 0x73, 0x65], Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()))), \"quad5\" => MeshCat.SceneTrees.SceneNode(nothing, nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}(\"base\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x71, 0x75, 0x61, 0x64, 0x35, 0x2f, 0x62, 0x61, 0x73, 0x65], UInt8[0x83, 0xa6, 0x6d, 0x61, 0x74, 0x72, 0x69, 0x78, 0xc7, 0x40  …  0x71, 0x75, 0x61, 0x64, 0x35, 0x2f, 0x62, 0x61, 0x73, 0x65], Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()))), \"rope7\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x68, 0x63, 0x61, 0x74, 0x2f, 0x72, 0x6f, 0x70, 0x65, 0x37], nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}()), \"rope5\" => MeshCat.SceneTrees.SceneNode(UInt8[0x83, 0xa6, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x84, 0xaa  …  0x68, 0x63, 0x61, 0x74, 0x2f, 0x72, 0x6f, 0x70, 0x65, 0x35], nothing, Dict{String, Vector{UInt8}}(), nothing, Dict{String, MeshCat.SceneTrees.SceneNode}())…)))), Set{HTTP.WebSockets.WebSocket}(), ip\"127.0.0.1\", 8715, HTTP.Servers.Server{HTTP.Servers.Listener{Nothing, Sockets.TCPServer}}(HTTP.Servers.Listener{Nothing, Sockets.TCPServer}(Sockets.InetAddr{Sockets.IPv4}(ip\"127.0.0.1\", 8715), \"127.0.0.1\", \"8715\", nothing, Sockets.TCPServer(RawFD(76) active)), nothing, Set{HTTP.Connections.Connection}(), Task (runnable) @0x0000000119bfc010, ReentrantLock(nothing, Base.GenericCondition{Base.Threads.SpinLock}(Base.InvasiveLinkedList{Task}(nothing, nothing), Base.Threads.SpinLock(0)), 0))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "let\n",
+    "    vis = mc.Visualizer()\n",
     "\n",
-    "    # create_cyl(vis, rope_length, 0.05)dragon_Qs = [dcm_from_phi(θ * [1, .2, .3]) for θ in range(0.0, pi/2, length=N)]\n",
-    "    quad_Qs = [dcm_from_phi(θ * [-0.1, 1, -0.3]) for θ in range(0.0, pi / 2, length=N)]\n",
+    "    # NOTICE HOW I USE [:<OBJECT>][:base] WHEN DEFINING THE INITIAL OBJ OFFSETS \n",
+    "    # THEN WHEN I DO ANIMATION, I JUST USE [:<OBJECT>]\n",
     "\n",
-    "    # animate \n",
-    "    anim = mc.Animation(floor(Int, 1 / dt))\n",
-    "    for k = 1:N\n",
-    "        mc.atframe(anim, k) do\n",
-    "            # NOTE no :base\n",
-    "            # mc.settransform!(vis[:dragon], mc.compose(  \n",
-    "            #     mc.Translation(r_dragon[k]),\n",
-    "            #     mc.LinearMap(dragon_Qs[k])\n",
-    "            # ))\n",
-    "            # # NOTE no :base\n",
-    "            # mc.settransform!(vis[:quad], mc.compose(\n",
-    "            #     mc.Translation(r_quad[k]),\n",
-    "            #     mc.LinearMap(quad_Qs[k])\n",
-    "            # ))\n",
-    "            # mc.settransform!(vis[:quad2], mc.compose(\n",
-    "            #     mc.Translation(r_quad2[k]),\n",
-    "            #     mc.LinearMap(quad_Qs[k])\n",
-    "            # ))\n",
     "\n",
-    "            # mc.settransform!(vis[:rope], mc.compose(\n",
-    "            #     mc.Translation(rope_rs[k]),\n",
-    "            #     mc.LinearMap(rope_Qs[k])\n",
-    "            # ))\n",
-    "            # mc.settransform!(vis[:rope2], mc.compose(\n",
-    "            #     mc.Translation(rope2_rs[k]),\n",
-    "            #     mc.LinearMap(rope2_Qs[k])\n",
-    "            # ))\n",
-    "        end\n",
-    "    end\n",
-    "    mc.setanimation!(vis, anim)\n",
+    "    initialise_ball(mc,vis)\n",
+    "    rope_length = 5.0\n",
+    "    N = 12\n",
+    "\n",
+    "    initialise_quads(N,rope_length,mc,vis)\n",
     "    mc.render(vis)\n",
     "end"
    ]
