added some dependencies, still an issue on quaterion

--- a/graphics.ipynb
+++ b/graphics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -11,14 +11,46 @@
      "text": [
       "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/Desktop/16745/recitations-2024/16745proj/Project.toml`\n"
      ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: QuatRotation not defined\nin expression starting at /Users/harshul/Desktop/16745/recitations-2024/16745proj/quaternions.jl:23",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: QuatRotation not defined\n",
+      "in expression starting at /Users/harshul/Desktop/16745/recitations-2024/16745proj/quaternions.jl:23\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] getproperty(x::Module, f::Symbol)\n",
+      "   @ Base ./Base.jl:26\n",
+      " [2] top-level scope\n",
+      "   @ ~/Desktop/16745/recitations-2024/16745proj/quaternions.jl:23"
+     ]
     }
    ],
    "source": [
     "import Pkg;\n",
+    "# Pkg.resolve()\n",
+    "Pkg.activate(@__DIR__)\n",
     "Pkg.instantiate()\n",
-    "Pkg.activate(\".\")\n",
+    "import Rotations\n",
+    "import CoordinateTransformations\n",
     "import MeshCat as mc\n",
-    "using LinearAlgebra"
+    "import MathOptInterface as MOI\n",
+    "import Ipopt \n",
+    "import FiniteDiff\n",
+    "import ForwardDiff as FD\n",
+    "import Convex as cvx \n",
+    "import ECOS\n",
+    "using LinearAlgebra\n",
+    "using Plots\n",
+    "using Random\n",
+    "using JLD2\n",
+    "using Test\n",
+    "using StaticArrays\n",
+    "using Printf\n",
+    "const Quat=QuatRotation\n",
+    "include(\"quaternions.jl\")"
    ]
   },
   {
